--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/types": "^7.6.3",
         "@typescript-eslint/eslint-plugin": "^2.5.0",
         "@typescript-eslint/parser": "^2.5.0",
         "eslint": "^6.5.1",
@@ -35,5 +36,8 @@
         "lint-staged": "^9.4.2",
         "prettier": "^1.18.2",
         "typescript": "^3.6.4"
+    },
+    "dependencies": {
+        "@babel/parser": "^7.6.4"
     }
 }
